# AgentDR

./: .gitignore  README.md
.github/actions/agentdr-policy-gate/: action.yml
.github/workflows/: release.yml
adr_dashboard/: .abacus.donotdelete  .project_instructions.md
adr_dashboard/nextjs_space/: .env  middleware.ts  tsconfig.tsbuildinfo
adr_dashboard/nextjs_space/app/: globals.css  layout.tsx
adr_dashboard/nextjs_space/app/activity/: page.tsx
adr_dashboard/nextjs_space/app/activity/_components/: activity-feed.tsx
adr_dashboard/nextjs_space/app/alerts/: page.tsx
adr_dashboard/nextjs_space/app/alerts/_components/: alerts-content.tsx
adr_dashboard/nextjs_space/app/analytics/: page.tsx
adr_dashboard/nextjs_space/app/analytics/_components/: agent-chart.tsx  analytics-content.tsx  heatmap-chart.tsx  risk-breakdown-chart.tsx  timeline-chart.tsx  type-distribution-chart.tsx
adr_dashboard/nextjs_space/app/api/alerts/: route.ts
adr_dashboard/nextjs_space/app/api/baselines/: route.ts
adr_dashboard/nextjs_space/app/api/events/: route.ts
adr_dashboard/nextjs_space/app/api/hosts/: route.ts
adr_dashboard/nextjs_space/app/api/organization/: route.ts
adr_dashboard/nextjs_space/app/api/policies/: route.ts
adr_dashboard/nextjs_space/app/api/sessions/: route.ts
adr_dashboard/nextjs_space/app/api/signup/: route.ts
adr_dashboard/nextjs_space/app/api/stats/: route.ts
adr_dashboard/nextjs_space/app/api/sync/: route.ts
adr_dashboard/nextjs_space/app/api/users/: route.ts
adr_dashboard/nextjs_space/app/dashboard/: page.tsx
adr_dashboard/nextjs_space/app/dashboard/_components/: dashboard-content.tsx
adr_dashboard/nextjs_space/app/llm-guard/: page.tsx
adr_dashboard/nextjs_space/app/llm-guard/_components/: llm-guard-content.tsx
adr_dashboard/nextjs_space/app/login/: page.tsx
adr_dashboard/nextjs_space/app/logs/: page.tsx
adr_dashboard/nextjs_space/app/logs/_components/: log-viewer.tsx
adr_dashboard/nextjs_space/app/policies/: page.tsx
adr_dashboard/nextjs_space/app/policies/_components/: policies-content.tsx
adr_dashboard/nextjs_space/app/sessions/: page.tsx
adr_dashboard/nextjs_space/app/sessions/[traceId]/: page.tsx
adr_dashboard/nextjs_space/app/sessions/_components/: session-detail.tsx  sessions-content.tsx
adr_dashboard/nextjs_space/app/settings/: page.tsx
adr_dashboard/nextjs_space/app/settings/llm-guard/: page.tsx
adr_dashboard/nextjs_space/app/showcase/: page.tsx
adr_dashboard/nextjs_space/app/ueba/: page.tsx
adr_dashboard/nextjs_space/components/: dashboard-layout.tsx  providers.tsx  sidebar.tsx
adr_dashboard/nextjs_space/data/: events.jsonl
adr_dashboard/nextjs_space/data/cosai-community/: checksums.sha256
adr_dashboard/nextjs_space/hooks/: use-fetch.ts
adr_dashboard/nextjs_space/lib/: aitf.ts  auth-options.ts  baselines.ts  llm-guard-config.ts  llm-guard-presets.ts  session-helpers.ts
adr_dashboard/nextjs_space/prisma/: schema.prisma
adr_dashboard/nextjs_space/scripts/: seed.ts
adr_dashboard/nextjs_space/types/: next-auth.d.ts
adr_system/: .abacus.donotdelete  README.md  config.json  requirements.txt
adr_system/agent/: config_manager.py  integrity.py  logging_utils.py  service.py  storage.py
adr_system/agent/runtime/: status.json
adr_system/archive/python-agent/: README.md
adr_system/archive/python-agent/agent/: __init__.py  detectors.py  engine.py  main.py  models.py
adr_system/cosai-community/: README.md  checksums.sha256
adr_system/cosai-community/docs/: CONTRIBUTING.md
adr_system/cosai-community/policies/: detection-rules.json  discovery.yaml  policies.yaml
adr_system/cosai-community/rules/: agent-signatures.json  ai-endpoints.json
adr_system/cosai-community/scripts/: generate-checksums.sh
adr_system/rust_agent/: Cargo.toml
adr_system/rust_agent/src/: config.rs  detectors.rs  engine.rs  integrity.rs  main.rs  models.rs  storage.rs
adr_system/rust_agent/src/agents/: mod.rs
adr_system/rust_agent/src/discovery/: mod.rs  policy.rs  prompt.rs  scan.rs  state.rs
adr_system/rust_agent/src/exporters/: chronicle.rs  datadog.rs  elastic.rs  mod.rs  ocsf.rs  sentinel.rs  snowflake.rs  splunk.rs  syslog.rs  wazuh.rs  xsiam.rs
adr_system/rust_agent/src/hooks/: aider.rs  claude_code.rs  codex.rs  common.rs  cursor.rs  mod.rs  opencode.rs
adr_system/rust_agent/src/ingest/: aitf_interop.rs  mod.rs  openshell.rs  otlp.rs
adr_system/rust_agent/src/mcp/: intercept.rs  inventory.rs  mod.rs
adr_system/rust_agent/src/monitors/: browser.rs  file.rs  kernel.rs  mod.rs  network.rs  process.rs
adr_system/rust_agent/src/policy/: engine.rs  matcher.rs  mod.rs
adr_system/rust_agent/src/proxy/: auth.rs  health.rs  mod.rs  monitor.rs  provenance.rs  rate_limit.rs  reverse.rs
adr_system/rust_agent/src/shell/: mod.rs
adr_system/rust_agent/src/watchdog/: mod.rs
docs/blog/: 2026-launch-post.md
docs/integrations/: llm-guard-reverse-proxy.md  openshell-ingest.md
docs/marketing/: messaging.md  plan.md
docs/presentations/: defcon-ai-village-2026.md
docs/test-plans/: README.md  linux.md  macos.md  windows.md
homebrew-tap/Formula/: agentdr.rb
mdm/fleet/: agentdr-osquery-pack.json
mdm/intune/: agentdr-windows-policy.json
mdm/jamf/: agentdr.mobileconfig
mdm/kandji/: agentdr-blueprint.yaml
packaging/linux/deb/: build-deb.sh
packaging/linux/deb/DEBIAN/: control  postinst  prerm
packaging/linux/rpm/: agentdr.spec  build-rpm.sh
packaging/linux/systemd/: agentdr.service
packaging/macos/: Distribution.xml  build-pkg.sh
packaging/macos/LaunchDaemons/: com.cosai.agentdr.plist
packaging/macos/scripts/: postinstall  preinstall
packaging/windows/: agentdr.wxs  build-msi.ps1  default-config.toml
scoop/: agentdr.json
(+24 files in other folders)
