[package]
name = "adr_agent"
version = "0.1.0"
edition = "2021"
description = "CoSAI ADR Agent — AI Detection & Response endpoint monitor (Rust)"
authors = ["CoSAI Contributors"]
license = "Apache-2.0"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client for event pushing
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# System monitoring
sysinfo = "0.33"

# File system watching
notify = "7"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Config file handling
toml = "0.8"

# SHA-256 integrity verification
sha2 = "0.10"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
