[package]
name = "adr_agent"
version = "0.2.0"
edition = "2021"
description = "CoSAI ADR Agent — AI Detection & Response endpoint monitor (Rust)"
authors = ["CoSAI Contributors"]
license = "Apache-2.0"

[[bin]]
name = "adr-agent"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client for event pushing
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# HTTP server for OTLP ingest (Tier 1)
axum = { version = "0.7", features = ["json", "macros"] }
tower-http = { version = "0.6", features = ["limit", "trace"] }
bytes = "1"
flate2 = "1"

# System monitoring
sysinfo = "0.33"

# File system watching
notify = "7"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Config file handling
toml = "0.8"

# SHA-256 integrity verification
sha2 = "0.10"

# Paths (hooks, MCP inventory)
dirs = "5"
hostname = "0.4"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1

# Cargo.wix metadata for Windows MSI builds (Tier 2)
[package.metadata.wix]
upgrade-guid = "B7B9F4F4-2B15-4E5F-9A57-2C9A0E2C9F11"
path-guid    = "B7B9F4F4-2B15-4E5F-9A57-2C9A0E2C9F22"
license      = false
eula         = false
